libs/updraft_condor/src/snapshots/updraft_condor__udp_ini__tests__creates_a_missing_file.snap
---
source: libs/updraft_condor/src/udp_ini.rs
expression: "std::fs::read_to_string(&path).unwrap()"
---
[General]
Enabled=1

[Connection]
Host=127.0.0.1
Port=55278

[Misc]
SendIntervalMs=100
ExtendedData1=1
