libs/updraft_condor/src/snapshots/updraft_condor__udp_ini__tests__enables_the_manual_file_and_keeps_the_other_lines.snap
---
source: libs/updraft_condor/src/udp_ini.rs
expression: "std::fs::read_to_string(&path).unwrap()"
---
[General]
Enabled=1
[Connection]
Host=127.0.0.1
Port=55278
[Misc]
SendIntervalMs=1
ExtendedData=0
ExtendedData1=1
LogToFile=0
